# infrastructure/middleware/auth_middleware.go
@@ -3,7 +3,7 @@ package middleware
 import (
 	"errors"
 	"fmt"
-	interfaces "github.com/demola234/defifundr/pkg/app_errors"
+	newError "github.com/demola234/defifundr/pkg/app_errors"
 	token "github.com/demola234/defifundr/pkg/token_maker"
 	"net/http"
 	"strings"
@@ -22,28 +22,28 @@ func AuthMiddleware(tokenMaker token.Maker) gin.HandlerFunc {
 		authHeader := ctx.GetHeader(authorizationHeader)
 		if len(authHeader) == 0 {
 			err := errors.New("authorization header not found")
-			ctx.AbortWithStatusJSON(http.StatusUnauthorized, interfaces.ErrorResponse(err, http.StatusUnauthorized))
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, newError.ErrorResponse(err, http.StatusUnauthorized))
 			return
 		}
 
 		stringSplit := strings.Fields(authHeader)
 		if len(stringSplit) < 2 {
 			err := errors.New("invalid authorization header format")
-			ctx.AbortWithStatusJSON(http.StatusUnauthorized, interfaces.ErrorResponse(err, http.StatusUnauthorized))
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, newError.ErrorResponse(err, http.StatusUnauthorized))
 			return
 		}
 
 		authType := strings.ToLower(stringSplit[0])
 		if authType != authorizationBearer {
 			err := fmt.Errorf("unsupported authorization type %s", authType)
-			ctx.AbortWithStatusJSON(http.StatusUnauthorized, interfaces.ErrorResponse(err, http.StatusUnauthorized))
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, newError.ErrorResponse(err, http.StatusUnauthorized))
 			return
 		}
 
 		accessToken := stringSplit[1]
 		payload, err := tokenMaker.VerifyToken(accessToken)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusUnauthorized, interfaces.ErrorResponse(err, http.StatusUnauthorized))
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, newError.ErrorResponse(err, http.StatusUnauthorized))
 			return
 		}
 
